--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1>My very first webpage</h1>
   <p>This is my first paragraph.</p>
-  <p>Madre mia qué dificil!</p>
+  <p>Madre mía qué difícil!</p>
 </body>
 </html>
