--- a/index.html
+++ b/index.html
@@ -7,9 +7,36 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>My very first webpage</h1>
-  <p>This is my first paragraph.</p>
-  <p>Madre mía qué difícil!</p>
-  <p>Pero venga va que lo conseguiremos!</p>
+  <header>
+        <h1> 
+          <a href="Quique Sánchez Super Portfolio"></a>
+        </h1>
+    <nav>
+      <ul>
+        <li><a href="Coding">Home</a></li>
+        <li><a href="Contact"></a></li>
+        <li><a href="*"></a></li>
+      </ul>    
+    </nav>
+  </header>
+  <main>
+<p>I am studying the coding week!!! OMG</p>
+<p>I'll learn:</p>
+<ul>
+    <li>Html</li>
+    <li>Css</li>
+</ul>
+<h2>Html</h2>
+<p>Html stands for <strong>Hypertext Markup Language</strong></p>
+<h2>Css</h2>
+<p>Css Stands for <strong>Cascadyng Style Sheet</strong></p>
+</main>
+
+<footer>
+  <p>
+  Quique Sánchez © 2000–2019
+  </p>
+</footer>
+
 </body>
 </html>
