--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav>
       <ul>
         <li><a href="Coding">Home</a></li>
-        <li><a href="Contact"></a></li>
-        <li><a href="*"></a></li>
+        <li><a href="Contact">Contact</a></li>
+        <li><a href="Something Else, ou yeah!">Something else</a></li>
       </ul>    
     </nav>
   </header>
