--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav>
       <ul>
         <li><a href="Coding">Home</a></li>
-        <li><a href="Contact">Contact</a></li>
-        <li><a href="Something Else, ou yeah!">Something else</a></li>
+        <li><a href="Work">Contact</a></li>
+        <li><a href="Contact">Something else</a></li>
       </ul>    
     </nav>
   </header>
@@ -34,7 +34,7 @@
 
 <footer>
   <p>
-  Quique Sánchez © 2000–2019
+  Quique Sánchez © 2000–2019. What a time to be alive.
   </p>
 </footer>
 
