Add the Html Skeleton

--- a/index.html
+++ b/index.html
@@ -1,42 +1,63 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="stylesheets/style.css">
+  <title>My superporfolio</title>
 </head>
+
 <body>
   <header>
-        <h1> 
-          <a href="Quique Sánchez Super Portfolio"></a>
-        </h1>
+    <h1>
+      <a href="Quique Sánchez Super Portfolio"></a>
+    </h1>
     <nav>
       <ul>
-        <li><a href="Coding">Home</a></li>
-        <li><a href="Work">Contact</a></li>
-        <li><a href="Contact">Something else</a></li>
-      </ul>    
+        <li><a>Home</a></li>
+        <li><a href="work.html">Work</a></li>
+        <li><a href="contact">Contact</a></li>
+        <li><a href="ouyeah.html">Ou yeah!</a></li>
+      </ul>
     </nav>
   </header>
   <main>
-<p>I am studying the coding week!!! OMG</p>
-<p>I'll learn:</p>
-<ul>
-    <li>Html</li>
-    <li>Css</li>
-</ul>
-<h2>Html</h2>
-<p>Html stands for <strong>Hypertext Markup Language</strong></p>
-<h2>Css</h2>
-<p>Css Stands for <strong>Cascadyng Style Sheet</strong></p>
-</main>
 
-<footer>
-  <p>
-  Quique Sánchez © 2000–2019. What a time to be alive.
-  </p>
-</footer>
+    <section>
+      <p>I am studying the coding week!!! OMG</p>
+      <p>I'll learn:</p>
+      <ul>
+        <li>Html</li>
+        <li>Css</li>
+      </ul>
+    </section>
+
+    <section>
+
+      <h2>Images</h2>
+
+      <figure>
+        <img src="../coding-week-day1/img/logo.png" alt="Foto de algo">
+        <img src="../coding-week-day1/img/logo.png" alt="Foto de algo">
+        <img src="../coding-week-day1/img/logo.png" alt="Foto de algo">
+      </figure>
+
+    </section>
+
+    <h2>Html</h2>
+    <p>Html stands for <strong>Hypertext Markup Language</strong></p>
+    <h2>Css</h2>
+    <p>Css Stands for <strong>Cascadyng Style Sheet</strong></p>
+  </main>
+
+  <footer>
+    <p>Quique Sánchez © 2000–2019. What a time to be alive.</p>
+    <a href="mailto:quiquesr88@gmail.com">Super Email</a>
+  </footer>
 
 </body>
+
 </html>
